GiRaFFE: Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb: Starting work on new u0 algorithm.

--- a/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "This notebook validates our new, NRPyfied HLLE solver against the function from the original `GiRaFFE` that calculates the flux for $\\tilde{S}_i$ according to the the method of Harten, Lax, von Leer, and Einfeldt (HLLE), assuming that we have calculated the values of the flux on the cell faces according to the piecewise-parabolic method (PPM) of [Colella and Woodward (1984)](https://crd.lbl.gov/assets/pubs_presos/AMCS/ANAG/A141984.pdf), modified for the case of GRFFE. \n",
     "\n",
-    "**Module Status:** <font color=red><b> In-Progress: </b></font> Ideally, later versions will generate the NRPy+ version on the fly and download the ETK version from bitbucket.\n",
+    "**Module Status:** <font color=green><b> Validated: </b></font> This code has passed unit tests against the original `GiRaFFE` version.\n",
     "\n",
     "**Validation Notes:** Once this is completed, it will show the validation of [Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux](../Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb).\n",
     "\n",
@@ -37,6 +37,7 @@
     "#include \"math.h\"\n",
     "#include \"string.h\" // Needed for strncmp, etc.\n",
     "#include \"stdint.h\" // Needed for Windows GCC 6.x compatibility\n",
+    "#include <time.h>   // Needed to set a random seed.\n",
     "\n",
     "// Standard GRFFE parameters:\n",
     "const double GAMMA_SPEED_LIMIT = 2000.0;\n",
@@ -204,6 +205,7 @@
     "    CCTK_REAL st_x_flux; CCTK_REAL st_y_flux; CCTK_REAL st_z_flux;\n",
     "    \n",
     "    // Now, it's time to make the random numbers.\n",
+    "    srand ( time ( NULL)); // Set the seed\n",
     "    // We take care to make sure the corresponding quantities have the SAME value.\n",
     "    auxevol_gfs[IDX4(ALPHA_FACEGF, i0,i1,i2)] = (double)rand()/RAND_MAX;\n",
     "    const double alpha = auxevol_gfs[IDX4(ALPHA_FACEGF, i0,i1,i2)];\n",
@@ -296,6 +298,13 @@
     "    Ur[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)]-betay;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ur[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)]-betaz;\n",
+    "    /* Near-luminal */\n",
+    "    /*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)] = 1.0-(double)rand()/RAND_MAX*0.2;\n",
+    "    Ur[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)]-betax;\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)] = 1.0-(double)rand()/RAND_MAX*0.2;\n",
+    "    Ur[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)]-betay;\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)] = 1.0-(double)rand()/RAND_MAX*0.2;\n",
+    "    Ur[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)]-betaz;*/\n",
     "    \n",
     "    auxevol_gfs[IDX4(B_RU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ur[BX_CENTER] = auxevol_gfs[IDX4(B_RU0GF, i0,i1,i2)];\n",
@@ -310,6 +319,13 @@
     "    Ul[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)]-betay;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ul[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]-betaz;\n",
+    "    /* Near-luminal */\n",
+    "    /*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)] = 1.0-(double)rand()/RAND_MAX*0.2;\n",
+    "    Ul[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)]-betax;\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)] = 1.0-(double)rand()/RAND_MAX*0.2;\n",
+    "    Ul[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)]-betay;\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)] = 1.0-(double)rand()/RAND_MAX*0.2;\n",
+    "    Ul[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]-betaz;*/\n",
     "    \n",
     "    auxevol_gfs[IDX4(B_LU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ul[BX_CENTER] = auxevol_gfs[IDX4(B_LU0GF, i0,i1,i2)];\n",
@@ -318,6 +334,9 @@
     "    auxevol_gfs[IDX4(B_LU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ul[BZ_CENTER] = auxevol_gfs[IDX4(B_LU2GF, i0,i1,i2)];\n",
     "    \n",
+    "    \n",
+    "    printf(\"NRPy+ speeds: %.4e, %.4e, %.4e, %.4e, %.4e, %.4e\\\\n\",auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)],auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]);\n",
+    "    printf(\"ETK   speeds: %.4e, %.4e, %.4e, %.4e, %.4e, %.4e\\\\n\\\\n\",Ur[VX],Ur[VY],Ur[VZ],Ul[VX],Ul[VY],Ul[VZ]);\n",
     "    // Now, we'll run the NRPy+ and ETK functions, once in each flux_dirn.\n",
     "    // We'll compare the output in-between each \n",
     "    GRFFE__S_0__flux(0,0,0, auxevol_gfs);\n",
@@ -369,23 +388,26 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
-      "Finished executing in 0.415766954422 seconds.\n",
+      "Finished executing in 0.416653156281 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.427676916122 seconds.\n",
+      "Finished in 0.427472114563 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "NRPy+ Results: 4.4742019466681028e-02, -1.5102730832110866e-02, 9.9827212204463573e-03\n",
-      "ETK   Results: 4.4742019466681007e-02, -1.5102730832110872e-02, 9.9827212204463694e-03\n",
+      "NRPy+ speeds: -8.4683e-01, 1.0157e-01, -3.8182e-01, -4.9938e-01, -9.8604e-01, 5.6449e-01\n",
+      "ETK   speeds: -1.2148e+00, -2.3545e-01, -7.0866e-02, -1.0469e+00, -7.6085e-01, 3.8628e-01\n",
       "\n",
-      "NRPy+ Results: 2.2170737273725850e-02, 2.7915561596633463e-02, -7.0198826602302714e-02\n",
-      "ETK   Results: 2.2170737273725830e-02, 2.7915561596633422e-02, -7.0198826602302672e-02\n",
+      "NRPy+ Results: 1.9372189471040795e-02, -7.6078259345604970e-04, 2.5875073450735284e-02\n",
+      "ETK   Results: 1.9372189471040444e-02, -7.6078259345604103e-04, 2.5875073450735107e-02\n",
       "\n",
-      "NRPy+ Results: 2.9446391202536848e-03, -4.3706215207438191e-02, 2.0484517285635471e-02\n",
-      "ETK   Results: 2.9446391202536870e-03, -4.3706215207438212e-02, 2.0484517285635488e-02\n",
+      "NRPy+ Results: 5.6573313329408882e-03, 1.8949418912056601e-04, 8.4465480773639780e-03\n",
+      "ETK   Results: 5.6577156109506197e-03, 1.8844032449628301e-04, 8.4459201500959279e-03\n",
       "\n",
-      "Finished in 0.0270550251007 seconds.\n",
+      "NRPy+ Results: -7.7547656868976345e-03, -2.4674363750911296e-02, 2.0858536090248892e-02\n",
+      "ETK   Results: -7.7540205102424372e-03, -2.4682154280436724e-02, 2.0862816205475192e-02\n",
+      "\n",
+      "Finished in 0.0272181034088 seconds.\n",
       "\n",
       "\n"
      ]
