Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro/Two_BHs_Collide-opt: Improve algorithm outline. No functional change.

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-opt.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-opt.ipynb
@@ -37,16 +37,15 @@
     "## Introduction:\n",
     "Here we use NRPy+ to generate the C source code necessary to set up initial data for two black holes (Brill-Lindquist, [Brill & Lindquist, Phys. Rev. 131, 471, 1963](https://journals.aps.org/pr/abstract/10.1103/PhysRev.131.471); see also Eq. 1 of [Brandt & Brügmann, arXiv:gr-qc/9711015v1](https://arxiv.org/pdf/gr-qc/9711015v1.pdf)). Then we use it to generate the RHS expressions for [Method of Lines](https://reference.wolfram.com/language/tutorial/NDSolveMethodOfLines.html) time integration based on the [explicit Runge-Kutta fourth-order scheme](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods) (RK4).\n",
     "\n",
-    "The entire algorithm is outlined below, with NRPy+-based components highlighted in <font color='green'>green</font>.\n",
-    "\n",
     "1. Allocate memory for gridfunctions, including temporary storage for the RK4 time integration.\n",
-    "1. <font color='green'>Set gridfunction values to initial data (**[documented in previous start-to-finish module](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.ipynb)**).</font>\n",
-    "1. Evolve the initial data forward in time using RK4 time integration. At each RK4 substep, do the following:\n",
-    "    1. <font color='green'>Evaluate BSSN RHS expressions.</font>\n",
-    "    1. Apply singular, curvilinear coordinate boundary conditions [*a la* the SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658)\n",
-    "    1. <font color='green'>Enforce conformal 3-metric $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint</font>\n",
-    "1. At the end of each iteration in time, output the <font color='green'>Hamiltonian constraint violation</font>.\n",
-    "1. Repeat the above steps at two numerical resolutions to confirm convergence to zero."
+    "1. Set gridfunction values to initial data.\n",
+    "1. Next, integrate the initial data forward in time using the Method of Lines coupled to a Runge-Kutta explicit timestepping algorithm:\n",
+    "    1. At the start of each iteration in time, output the Hamiltonian constraint violation.\n",
+    "    1. At each RK time substep, do the following:\n",
+    "        1. Evaluate BSSN RHS expressions.\n",
+    "        1. Apply singular, curvilinear coordinate boundary conditions [*a la* the SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658)\n",
+    "        1. Apply constraint on conformal 3-metric: $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$\n",
+    "1. Repeat above steps at two numerical resolutions to confirm convergence to zero."
    ]
   },
   {
