--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
@@ -33,15 +33,16 @@
     "## Introduction:\n",
     "Here we use NRPy+ to generate initial data for a [simple polytrope TOV star](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation).\n",
     "\n",
-    "The entire algorithm is outlined below, with NRPy+-based components highlighted in <font color='green'>green</font>.\n",
+    "The entire algorithm is outlined below:\n",
     "\n",
     "1. Allocate memory for gridfunctions, including temporary storage for the RK4 time integration.\n",
-    "1. <font color='green'>Set gridfunction values to initial data (**This module**).</font>\n",
-    "1. Evolve the system forward in time using RK4 time integration. At each RK4 substep, do the following:\n",
-    "    1. <font color='green'>Evaluate BSSN RHS expressions.</font>\n",
-    "    1. Apply singular, curvilinear coordinate boundary conditions [*a la* the SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658)\n",
-    "    1. <font color='green'>Apply constraints on conformal 3-metric: $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$</font>\n",
-    "1. At the end of each iteration in time, output the <font color='green'>Hamiltonian constraint violation</font>.\n",
+    "1. Set gridfunction values to initial data.\n",
+    "1. Next, integrate the initial data forward in time using the Method of Lines coupled to a Runge-Kutta explicit timestepping algorithm:\n",
+    "    1. At the start of each iteration in time, output the Hamiltonian constraint violation.\n",
+    "    1. At each RK time substep, do the following:\n",
+    "        1. Evaluate BSSN RHS expressions.\n",
+    "        1. Apply singular, curvilinear coordinate boundary conditions [*a la* the SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658)\n",
+    "        1. Apply constraint on conformal 3-metric: $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$\n",
     "1. Repeat above steps at two numerical resolutions to confirm convergence to zero."
    ]
   },
