--- a/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
@@ -274,7 +274,7 @@
     "# Step 5: Call functions within [`BSSN.BSSN_in_terms_of_ADM`](../edit/BSSN/BSSN_in_terms_of_ADM.py) ([**tutorial**](Tutorial-BSSN_in_terms_of_ADM.ipynb)) to perform the ADM-to-BSSN conversion for all BSSN quantities *except* $\\lambda^i$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{adm2bssn}$$\n",
     "\n",
-    "All ADM quantities were input into this function in the Spherical or Cartesian basis, as functions of $r,\\theta,\\phi$ or $x,y,z$, respectively. In [Step 3](#admfunc) and [Step 4](#adm_jacobian) above, we converted them to the `xx0,xx1,xx2` basis, and as functions of `xx0,xx1,xx2`. Here we convert ADM quantities in the `xx0,xx1,xx2` (a.k.a. \"rfm\") basis to their BSSN Curvilinear counterparts, in the same basis. **Note that we withold computation of the BSSN $\\lambda^i$ quantities until [a later section of this notebook](#lambda), as they must be evaluated using finite differences.**"
+    "All ADM quantities were input into this function in the Spherical or Cartesian basis, as functions of $r,\\theta,\\phi$ or $x,y,z$, respectively. In [Step 3](#admxx0xx1xx2) and [Step 4](#adm_jacobian) above, we converted them to the `xx0,xx1,xx2` basis, and as functions of `xx0,xx1,xx2`. Here we convert ADM quantities in the `xx0,xx1,xx2` (a.k.a. \"rfm\") basis to their BSSN Curvilinear counterparts, in the same basis. **Note that we withold computation of the BSSN $\\lambda^i$ quantities until [a later section of this notebook](#lambda), as they must be evaluated using finite differences.**"
    ]
   },
   {
@@ -585,7 +585,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb to latex\n",
-      "[NbConvertApp] Writing 70478 bytes to Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
+      "[NbConvertApp] Writing 72187 bytes to Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
