--- a/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -163,8 +163,8 @@
     "        original_file_code = urllib.urlopen(original_file_url[i]).read()\n",
     "\n",
     "    # Write down the file the original IllinoisGRMHD source code\n",
-    "#     with open(original_file_path,\"w\") as file:\n",
-    "#         file.write(original_file_code)\n",
+    "    with open(original_file_path,\"w\") as file:\n",
+    "        file.write(original_file_code)\n",
     "    \n",
     "    # We add the following lines to append includes to the code we're writing\n",
     "    out_string += \"\"\"#include \\\"\"\"\"\n",
@@ -205,7 +205,9 @@
     "    CCTK_REAL st_x_flux; CCTK_REAL st_y_flux; CCTK_REAL st_z_flux;\n",
     "    \n",
     "    // Now, it's time to make the random numbers.\n",
-    "    srand ( time ( NULL)); // Set the seed\n",
+    "    const long int seed = 1570632212;//time(NULL);\n",
+    "    //srand(seed); // Set the seed\n",
+    "    printf(\"seed = %ld\\\\n\",seed);\n",
     "    // We take care to make sure the corresponding quantities have the SAME value.\n",
     "    auxevol_gfs[IDX4(ALPHA_FACEGF, i0,i1,i2)] = (double)rand()/RAND_MAX;\n",
     "    const double alpha = auxevol_gfs[IDX4(ALPHA_FACEGF, i0,i1,i2)];\n",
@@ -299,11 +301,11 @@
     "    auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ur[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)]-betaz;\n",
     "    /* Near-luminal */\n",
-    "    /*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)] = 1.0-(double)rand()/RAND_MAX*0.2;\n",
+    "    /*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*0.2;\n",
     "    Ur[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)]-betax;\n",
-    "    auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)] = 1.0-(double)rand()/RAND_MAX*0.2;\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*0.2;\n",
     "    Ur[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)]-betay;\n",
-    "    auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)] = 1.0-(double)rand()/RAND_MAX*0.2;\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*0.2;\n",
     "    Ur[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)]-betaz;*/\n",
     "    \n",
     "    auxevol_gfs[IDX4(B_RU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
@@ -320,11 +322,11 @@
     "    auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ul[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]-betaz;\n",
     "    /* Near-luminal */\n",
-    "    /*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)] = 1.0-(double)rand()/RAND_MAX*0.2;\n",
+    "    /*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*0.2;\n",
     "    Ul[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)]-betax;\n",
-    "    auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)] = 1.0-(double)rand()/RAND_MAX*0.2;\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*0.2;\n",
     "    Ul[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)]-betay;\n",
-    "    auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)] = 1.0-(double)rand()/RAND_MAX*0.2;\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*0.2;\n",
     "    Ul[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]-betaz;*/\n",
     "    \n",
     "    auxevol_gfs[IDX4(B_LU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
@@ -360,6 +362,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we'll add a second unit test with which to confirm our rewrite of the algorithm by which we speed-limit the velocities and calculate $u^0$. First, we'll "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -369,15 +385,14 @@
     "import time\n",
     "\n",
     "with open(os.path.join(out_dir,\"Stilde_flux_unit_test.C\"),\"w\") as file:\n",
-    "    file.write(out_string)\n",
-    "        \n"
+    "    file.write(out_string)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -388,26 +403,27 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
-      "Finished executing in 0.416653156281 seconds.\n",
+      "Finished executing in 0.415985107422 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.427472114563 seconds.\n",
+      "Finished in 0.424285173416 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "NRPy+ speeds: -8.4683e-01, 1.0157e-01, -3.8182e-01, -4.9938e-01, -9.8604e-01, 5.6449e-01\n",
-      "ETK   speeds: -1.2148e+00, -2.3545e-01, -7.0866e-02, -1.0469e+00, -7.6085e-01, 3.8628e-01\n",
+      "seed = 1570632212\n",
+      "NRPy+ speeds: -4.5206e-02, 2.5774e-01, -2.7043e-01, 2.7142e-01, 4.3459e-01, -7.1679e-01\n",
+      "ETK   speeds: -5.7444e-01, 6.6100e-01, -3.3515e-01, -3.0841e-01, 8.0959e-01, -7.1018e-01\n",
       "\n",
-      "NRPy+ Results: 1.9372189471040795e-02, -7.6078259345604970e-04, 2.5875073450735284e-02\n",
-      "ETK   Results: 1.9372189471040444e-02, -7.6078259345604103e-04, 2.5875073450735107e-02\n",
+      "NRPy+ Results: 4.4742019466681014e-02, -1.5102730832110878e-02, 9.9827212204463729e-03\n",
+      "ETK   Results: 4.4742019466681007e-02, -1.5102730832110872e-02, 9.9827212204463694e-03\n",
       "\n",
-      "NRPy+ Results: 5.6573313329408882e-03, 1.8949418912056601e-04, 8.4465480773639780e-03\n",
-      "ETK   Results: 5.6577156109506197e-03, 1.8844032449628301e-04, 8.4459201500959279e-03\n",
+      "NRPy+ Results: 2.2170737273725816e-02, 2.7915561596633408e-02, -7.0198826602302630e-02\n",
+      "ETK   Results: 2.2170737273725830e-02, 2.7915561596633422e-02, -7.0198826602302672e-02\n",
       "\n",
-      "NRPy+ Results: -7.7547656868976345e-03, -2.4674363750911296e-02, 2.0858536090248892e-02\n",
-      "ETK   Results: -7.7540205102424372e-03, -2.4682154280436724e-02, 2.0862816205475192e-02\n",
+      "NRPy+ Results: 2.9446391202536800e-03, -4.3706215207438184e-02, 2.0484517285635474e-02\n",
+      "ETK   Results: 2.9446391202536870e-03, -4.3706215207438212e-02, 2.0484517285635488e-02\n",
       "\n",
-      "Finished in 0.0272181034088 seconds.\n",
+      "Finished in 0.0188729763031 seconds.\n",
       "\n",
       "\n"
      ]
