IllinoisGRMHD: inlined_functions -- PPEOS Patch: created a new function to compute P_cold and eps_cold, returning the appropriate polytropic index. As suggested by Zach, will break down that function into one that returns the polytropic index and one that does not

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__inlined_functions.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__inlined_functions.ipynb
@@ -53,12 +53,13 @@
     "    1. [Step 5.d](#ppeos__c_code__compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold): *The new `compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold()` function*\n",
     "        1. [Step 5.d.i](#ppeos__c_code__compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold__case1__rhob_equal_zero): Case 1:  $\\rho_{b} = 0$\n",
     "        1. [Step 5.d.ii](#ppeos__c_code__compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold__case2__single_polytropic_eos): Case 2: Polytropic EOSs\n",
+    "    1. [Step 5.e](#compute_p_cold__eps_cold): New function: `compute_P_cold__eps_cold()`\n",
     "1. [Step 6](#lower_4vector_output_spatial_part): **`lower_4vector_output_spatial_part`**\n",
     "1. [Step 7](#impose_speed_limit_output_u0): **`impose_speed_limit_output_u0`**\n",
     "1. [Step 8](#enforce_pressure_floor_ceiling): **`enforce_pressure_floor_ceiling`**\n",
     "1. [Step 9](#compute_smallba_b2_and_u_i_over_u0_psi4): **`compute_smallba_b2_and_u_i_over_u0_psi4`**\n",
-    "1. [Step 10](#code_validation): **Code validation**\n",
-    "1. [Step 11](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
+    "1. [Step 11](#code_validation): **Code validation**\n",
+    "1. [Step 12](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
    ]
   },
   {
@@ -957,6 +958,7 @@
     " *             : the EOS, namely: P_cold, eps_cold,\n",
     " *             : dPcold/drho, eps_th, h, and Gamma_cold\n",
     " * Dependencies: initialize_EOS_struct_from_input()\n",
+    " *             : compute_P_cold__eps_cold__polytropic_index()\n",
     " *\n",
     " * Inputs      : U               - array containing primitives {rho,P,v^{i},B^i}\n",
     " *             : P_cold          - cold pressure\n",
@@ -994,7 +996,7 @@
     "                                                                         CCTK_REAL &Gamma_cold) {\n",
     "  // This code handles equations of state of the form defined\n",
     "  // in Eqs 13-16 in http://arxiv.org/pdf/0802.0200.pdf\n",
-    "\n",
+    "    \n",
     "  if(U[RHOB]==0) {\n",
     "    P_cold      = 0.0;\n",
     "    eps_cold    = 0.0;\n",
@@ -1067,7 +1069,86 @@
    "source": [
     "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
+    "  int polytropic_index;\n",
+    "  compute_P_cold__eps_cold__polytropic_index(eos,U[RHOB], polytropic_index,P_cold,eps_cold);\n",
     "\n",
+    "  // Set polytropic quantities\n",
+    "  CCTK_REAL U_RHOB_inv      = 1.0/U[RHOB];\n",
+    "  CCTK_REAL K_poly          = eos.K_poly[polytropic_index];\n",
+    "  CCTK_REAL Gamma_poly      = eos.Gamma_poly[polytropic_index];\n",
+    "  CCTK_REAL eps_integ_const = eos.eps_integ_const[polytropic_index];\n",
+    "\n",
+    "  // Next compute dP/drho = Gamma * P / rho\n",
+    "  dPcold_drho = Gamma_poly*P_cold*U_RHOB_inv;\n",
+    "\n",
+    "  // Then we compute eps_th, h, and set Gamma_cold = Gamma_poly[j].\n",
+    "  eps_th = (U[PRESSURE] - P_cold)/(eos.Gamma_th-1.0)*U_RHOB_inv;\n",
+    "  h = 1.0 + eps_cold + eps_th + U[PRESSURE]*U_RHOB_inv;\n",
+    "  Gamma_cold = Gamma_poly;\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='compute_P_cold__eps_cold__polytropic_index'></a>\n",
+    "\n",
+    "## Step 5.e: `compute_P_cold__eps_cold__polytropic_index` \\[Back to [top](#toc)\\]\n",
+    "$$\\label{compute_P_cold__eps_cold__polytropic_index}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
+    "\n",
+    "\n",
+    "/* Function    : compute_P_cold__eps_cold__polytropic_index()\n",
+    " * Authors     : Zach Etienne & Leo Werneck\n",
+    " * Description : Computes P_cold and eps_cold. Returns also the\n",
+    " *               polytropic index used.\n",
+    " * Dependencies: initialize_EOS_struct_from_input()\n",
+    " *             : find_polytropic_K_and_Gamma_index()\n",
+    " *\n",
+    " * Inputs      : P_cold           - cold pressure\n",
+    " *             : eps_cold         - cold specific internal energy\n",
+    " *             : eos              - a struct containing the following\n",
+    " *                                  relevant quantities:\n",
+    " *             : neos             - number of polytropic EOSs used\n",
+    " *             : rho_poly         - array of rho values that determine\n",
+    " *                                  the polytropic EOS to be used.\n",
+    " *             : Gamma_poly       - array of Gamma_cold values to be\n",
+    " *                                  used in each polytropic EOS.\n",
+    " *             : K_poly           - array of K_poly values to be used\n",
+    " *                                  in each polytropic EOS.\n",
+    " *             : eps_integ_const  - array of C_{j} values, which are the\n",
+    " *                                  integration constants that arrise when\n",
+    " *                                  determining eps_{cold} for a piecewise\n",
+    " *                                  polytropic EOS.\n",
+    " *\n",
+    " * Outputs     : P_cold           - cold pressure (supports SPEOS and PPEOS)\n",
+    " *             : eps_cold         - cold specific internal energy (supports SPEOS and PPEOS)\n",
+    " *             : polytropic_index - polytropic index used for P_cold and eps_cold\n",
+    " *\n",
+    " *             SPEOS: Single-Polytrope Equation of State\n",
+    " *             PPEOS: Piecewise Polytrope Equation of State\n",
+    " */\n",
+    "static inline void compute_P_cold__eps_cold__polytropic_index(eos_struct eos, CCTK_REAL rho_in,\n",
+    "                                                              int &return_index, CCTK_REAL &P_cold,CCTK_REAL &eps_cold) {\n",
+    "  // This code handles equations of state of the form defined\n",
+    "  // in Eqs 13-16 in http://arxiv.org/pdf/0802.0200.pdf\n",
+    "  if(rho_in==0) {\n",
+    "    P_cold   = 0.0;\n",
+    "    eps_cold = 0.0;\n",
+    "    index    = 0;\n",
+    "    return;\n",
+    "  }\n",
+    "    \n",
     "  /*  --------------------------------------------------\n",
     "   * | Single and Piecewise Polytropic EOS modification |\n",
     "   *  --------------------------------------------------\n",
@@ -1098,18 +1179,14 @@
     "   * The index j is determined by the find_polytropic_K_and_Gamma_index() function.\n",
     "   */\n",
     "  // Set up useful auxiliary variables\n",
-    "  int polytropic_index      = find_polytropic_K_and_Gamma_index(eos,U[RHOB]);\n",
-    "  CCTK_REAL U_RHOB_inv      = 1.0/U[RHOB];\n",
+    "  int polytropic_index      = find_polytropic_K_and_Gamma_index(eos,rho_in);\n",
     "  CCTK_REAL K_poly          = eos.K_poly[polytropic_index];\n",
     "  CCTK_REAL Gamma_poly      = eos.Gamma_poly[polytropic_index];\n",
     "  CCTK_REAL eps_integ_const = eos.eps_integ_const[polytropic_index];\n",
     "    \n",
     "  // Then compute P_{cold}\n",
-    "  P_cold = K_poly*fasterpow_ppm_reconstruct(U[RHOB],Gamma_poly);\n",
-    "\n",
-    "  // Next compute dP/drho = Gamma * P / rho\n",
-    "  dPcold_drho = Gamma_poly*P_cold*U_RHOB_inv;\n",
-    "\n",
+    "  P_cold = K_poly*fasterpow_ppm_reconstruct(rho_in,Gamma_poly);\n",
+    "    \n",
     "  /* Then we compute the cold component of the specific internal energy,\n",
     "   * which in the case of a piecewise polytropic EOS is given by (neos -> N)\n",
     "   *\n",
@@ -1121,10 +1198,8 @@
     "   */\n",
     "  eps_cold = P_cold*U_RHOB_inv/(Gamma_poly-1.0) + eps_integ_const;\n",
     "\n",
-    "  // Then we compute eps_th, h, and set Gamma_cold = Gamma_poly[j].\n",
-    "  eps_th = (U[PRESSURE] - P_cold)/(eos.Gamma_th-1.0)*U_RHOB_inv;\n",
-    "  h = 1.0 + eps_cold + eps_th + U[PRESSURE]*U_RHOB_inv;\n",
-    "  Gamma_cold = Gamma_poly;\n",
+    "  // Return the polytropic index\n",
+    "  return_index = polytropic_index;\n",
     "\n",
     "}"
    ]
