IllinoisGRMHD: inlined_functions -- PPEOS Patch -- Modified the function compute_P_cold__eps_cold__polytropic_index() so that it no longer outputs the polytropic index. The functionality is more clean when using the already existent find_polytropic_K_and_Gamma_index() and avoids unecessary/unwanted registration of the polytropic index. This function is mostly used inside the lowlevel HARM routines.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__inlined_functions.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__inlined_functions.ipynb
@@ -1093,10 +1093,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='compute_P_cold__eps_cold__polytropic_index'></a>\n",
+    "<a id='compute_p_cold__eps_cold'></a>\n",
     "\n",
-    "## Step 5.e: `compute_P_cold__eps_cold__polytropic_index` \\[Back to [top](#toc)\\]\n",
-    "$$\\label{compute_P_cold__eps_cold__polytropic_index}$$"
+    "## Step 5.e: `compute_P_cold__eps_cold` \\[Back to [top](#toc)\\]\n",
+    "$$\\label{compute_p_cold__eps_cold}$$"
    ]
   },
   {
@@ -1108,10 +1108,9 @@
     "%%writefile -a $outfile_path__inlined_functions__C\n",
     "\n",
     "\n",
-    "/* Function    : compute_P_cold__eps_cold__polytropic_index()\n",
-    " * Authors     : Zach Etienne & Leo Werneck\n",
-    " * Description : Computes P_cold and eps_cold. Returns also the\n",
-    " *               polytropic index used.\n",
+    "/* Function    : compute_P_cold__eps_cold()\n",
+    " * Authors     : Leo Werneck\n",
+    " * Description : Computes P_cold and eps_cold.\n",
     " * Dependencies: initialize_EOS_struct_from_input()\n",
     " *             : find_polytropic_K_and_Gamma_index()\n",
     " *\n",
@@ -1138,8 +1137,8 @@
     " *             SPEOS: Single-Polytrope Equation of State\n",
     " *             PPEOS: Piecewise Polytrope Equation of State\n",
     " */\n",
-    "static inline void compute_P_cold__eps_cold__polytropic_index(eos_struct eos, CCTK_REAL rho_in,\n",
-    "                                                              int &return_index, CCTK_REAL &P_cold,CCTK_REAL &eps_cold) {\n",
+    "static inline void compute_P_cold__eps_cold(eos_struct eos, CCTK_REAL rho_in,\n",
+    "                                            CCTK_REAL &P_cold,CCTK_REAL &eps_cold) {\n",
     "  // This code handles equations of state of the form defined\n",
     "  // in Eqs 13-16 in http://arxiv.org/pdf/0802.0200.pdf\n",
     "  if(rho_in==0) {\n",
@@ -1197,9 +1196,6 @@
     "   *             | P_{N-2}/(rho*(Gamma_{N-2}-1)) + C_{N-2}, rho_{N-3} <= rho < rho_{N-2}\n",
     "   */\n",
     "  eps_cold = P_cold*U_RHOB_inv/(Gamma_poly-1.0) + eps_integ_const;\n",
-    "\n",
-    "  // Return the polytropic index\n",
-    "  return_index = polytropic_index;\n",
     "\n",
     "}"
    ]
@@ -2266,7 +2262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
