--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Tutorial-IllinoisGRMHD: A_i_rhs_no_gauge_terms.C\n",
     "\n",
-    "## Authors: Zach Etienne & Leo Werneck\n",
+    "## Authors: Leo Werneck & Zach Etienne\n",
     "\n",
     "<font color='red'>**This module is currently under development**</font>\n",
     "\n",
@@ -240,6 +240,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--2019-10-09 22:20:01--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/A_i_rhs_no_gauge_terms.C\r\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.2, 18.205.93.1\r\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\r\n",
+      "HTTP request sent, awaiting response... 200 OK\r\n",
+      "Length: 6441 (6.3K) [text/plain]\r\n",
+      "Saving to: ‘../src/A_i_rhs_no_gauge_terms-original.C’\r\n",
+      "\r\n",
+      "../src/A_i_rhs_no_g 100%[===================>]   6.29K  --.-KB/s    in 0s      \r\n",
+      "\r\n",
+      "2019-10-09 22:20:01 (176 MB/s) - ‘../src/A_i_rhs_no_gauge_terms-original.C’ saved [6441/6441]\r\n",
+      "\r\n",
       "Validation test for A_i_rhs_no_gauge_terms.C: PASSED!\n"
      ]
     }
@@ -261,12 +272,18 @@
     "# the code more portable\n",
     "try:\n",
     "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "    # Write down the file the original IllinoisGRMHD source code\n",
+    "    with open(original_IGM_file_path,\"w\") as file:\n",
+    "        file.write(original_IGM_file_code)\n",
     "except:\n",
-    "    original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
-    "\n",
-    "# Write down the file the original IllinoisGRMHD source code\n",
-    "with open(original_IGM_file_path,\"w\") as file:\n",
-    "    file.write(original_IGM_file_code)\n",
+    "    try:\n",
+    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
+    "        # Write down the file the original IllinoisGRMHD source code\n",
+    "        with open(original_IGM_file_path,\"w\") as file:\n",
+    "            file.write(original_IGM_file_code)\n",
+    "    except:\n",
+    "        # If all else fails, hope wget does the job\n",
+    "        !wget -O $original_IGM_file_path $original_IGM_file_url\n",
     "\n",
     "# Perform validation\n",
     "Validation__A_i_rhs_no_gauge_terms__C  = !diff $original_IGM_file_path $outfile_path__A_i_rhs_no_gauge_terms__C\n",
@@ -308,14 +325,84 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 43655 bytes to Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "[NbConvertApp] Writing 60133 bytes to Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n"
      ]
@@ -347,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
