--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Tutorial-IllinoisGRMHD: Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C\n",
     "\n",
-    "## Authors: Zach Etienne & Leo Werneck\n",
+    "## Authors: Leo Werneck & Zach Etienne\n",
     "\n",
     "<font color='red'>**This module is currently under development**</font>\n",
     "\n",
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C\n"
+      "Writing ../src/Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C\n"
      ]
     }
    ],
@@ -369,6 +369,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--2019-10-09 22:20:32--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C\r\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.2, 18.205.93.1\r\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\r\n",
+      "HTTP request sent, awaiting response... 200 OK\r\n",
+      "Length: 15797 (15K) [text/plain]\r\n",
+      "Saving to: ‘../src/Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs-original.C’\r\n",
+      "\r\n",
+      "../src/Lorenz_psi6p 100%[===================>]  15.43K  --.-KB/s    in 0.002s  \r\n",
+      "\r\n",
+      "2019-10-09 22:20:32 (8.03 MB/s) - ‘../src/Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs-original.C’ saved [15797/15797]\r\n",
+      "\r\n",
       "Validation test for Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C: PASSED!\n"
      ]
     }
@@ -390,12 +401,18 @@
     "# the code more portable\n",
     "try:\n",
     "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "    # Write down the file the original IllinoisGRMHD source code\n",
+    "    with open(original_IGM_file_path,\"w\") as file:\n",
+    "        file.write(original_IGM_file_code)\n",
     "except:\n",
-    "    original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
-    "\n",
-    "# Write down the file the original IllinoisGRMHD source code\n",
-    "with open(original_IGM_file_path,\"w\") as file:\n",
-    "    file.write(original_IGM_file_code)\n",
+    "    try:\n",
+    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
+    "        # Write down the file the original IllinoisGRMHD source code\n",
+    "        with open(original_IGM_file_path,\"w\") as file:\n",
+    "            file.write(original_IGM_file_code)\n",
+    "    except:\n",
+    "        # If all else fails, hope wget does the job\n",
+    "        !wget -O $original_IGM_file_path $original_IGM_file_url\n",
     "\n",
     "# Perform validation\n",
     "Validation__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs__C  = !diff $original_IGM_file_path $outfile_path__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs__C\n",
@@ -437,14 +454,84 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 56959 bytes to Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "[NbConvertApp] Writing 89311 bytes to Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n"
      ]
@@ -476,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
