--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__mhdflux.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__mhdflux.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Tutorial-IllinoisGRMHD: mhdflux.C\n",
     "\n",
-    "## Authors: Zach Etienne & Leo Werneck\n",
+    "## Authors: Leo Werneck & Zach Etienne\n",
     "\n",
     "<font color='red'>**This module is currently under development**</font>\n",
     "\n",
@@ -805,6 +805,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--2019-10-09 22:22:50--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/mhdflux.C\r\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.1, 18.205.93.0, 18.205.93.2\r\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.1|:443... connected.\r\n",
+      "HTTP request sent, awaiting response... 200 OK\r\n",
+      "Length: 11398 (11K) [text/plain]\r\n",
+      "Saving to: ‘../src/mhdflux-original.C’\r\n",
+      "\r\n",
+      "../src/mhdflux-orig 100%[===================>]  11.13K  --.-KB/s    in 0s      \r\n",
+      "\r\n",
+      "2019-10-09 22:22:51 (78.8 MB/s) - ‘../src/mhdflux-original.C’ saved [11398/11398]\r\n",
+      "\r\n",
       "Validation test for mhdflux.C: FAILED!\n",
       "Diff:\n",
       "20,23c20,23\n",
@@ -818,11 +829,11 @@
       ">   CCTK_REAL P_coldl,eps_coldl,dPcold_drhol=0,eps_thl=0,h_l=0,Gamma_coldl;\n",
       ">   compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold(Ul,eos,P_coldl,eps_coldl,dPcold_drhol,eps_thl,h_l,Gamma_coldl);\n",
       "60c60\n",
-      "<   compute_v02(dPcold_drhor,eos.Gamma_th,eps_thr,h_r,smallbr,Ur,v02r);\n",
+      "<   compute_v02(dPcold_drhor,eos.gamma_th,eps_thr,h_r,smallbr,Ur,v02r);\n",
       "---\n",
       ">   compute_v02(dPcold_drhor,eos.Gamma_th,eps_thr,h_r,smallbr,Ur,v02r);\n",
       "62c62\n",
-      "<   compute_v02(dPcold_drhol,eos.Gamma_th,eps_thl,h_l,smallbl,Ul,v02l);\n",
+      "<   compute_v02(dPcold_drhol,eos.gamma_th,eps_thl,h_l,smallbl,Ul,v02l);\n",
       "---\n",
       ">   compute_v02(dPcold_drhol,eos.Gamma_th,eps_thl,h_l,smallbl,Ul,v02l);\n"
      ]
@@ -845,12 +856,18 @@
     "# the code more portable\n",
     "try:\n",
     "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "    # Write down the file the original IllinoisGRMHD source code\n",
+    "    with open(original_IGM_file_path,\"w\") as file:\n",
+    "        file.write(original_IGM_file_code)\n",
     "except:\n",
-    "    original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
-    "\n",
-    "# Write down the file the original IllinoisGRMHD source code\n",
-    "with open(original_IGM_file_path,\"w\") as file:\n",
-    "    file.write(original_IGM_file_code)\n",
+    "    try:\n",
+    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
+    "        # Write down the file the original IllinoisGRMHD source code\n",
+    "        with open(original_IGM_file_path,\"w\") as file:\n",
+    "            file.write(original_IGM_file_code)\n",
+    "    except:\n",
+    "        # If all else fails, hope wget does the job\n",
+    "        !wget -O $original_IGM_file_path $original_IGM_file_url\n",
     "\n",
     "# Perform validation\n",
     "Validation__mhdflux__C  = !diff $original_IGM_file_path $outfile_path__mhdflux__C\n",
@@ -892,14 +909,154 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__mhdflux.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 70028 bytes to Tutorial-IllinoisGRMHD__mhdflux.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "[NbConvertApp] Writing 94286 bytes to Tutorial-IllinoisGRMHD__mhdflux.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n"
      ]
@@ -931,7 +1088,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
