--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__outer_boundaries.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__outer_boundaries.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Tutorial-IllinoisGRMHD: outer_boundaries.C\n",
     "\n",
-    "## Authors: Zach Etienne & Leo Werneck\n",
+    "## Authors: Leo Werneck & Zach Etienne\n",
     "\n",
     "<font color='red'>**This module is currently under development**</font>\n",
     "\n",
@@ -615,7 +615,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation test for outer_boundaries.C: PASSED!\n"
+      "--2019-10-09 22:23:01--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/outer_boundaries.C\r\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.2, 18.205.93.1\r\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\r\n",
+      "HTTP request sent, awaiting response... 200 OK\r\n",
+      "Length: 14266 (14K) [text/plain]\r\n",
+      "Saving to: ‘../src/outer_boundaries-original.C’\r\n",
+      "\r\n",
+      "../src/outer_bounda 100%[===================>]  13.93K  --.-KB/s    in 0s      \r\n",
+      "\r\n",
+      "2019-10-09 22:23:01 (135 MB/s) - ‘../src/outer_boundaries-original.C’ saved [14266/14266]\r\n",
+      "\r\n",
+      "Validation test for outer_boundaries.C: FAILED!\n",
+      "Diff:\n",
+      "154,155c154,165\n",
+      "< \n",
+      "<   // FIXME: only for single gamma-law EOS.\n",
+      "---\n",
+      ">     \n",
+      ">   /**********************************\n",
+      ">    * Piecewise Polytropic EOS Patch *\n",
+      ">    *   Setting up the EOS struct    *\n",
+      ">    **********************************/\n",
+      ">   /*\n",
+      ">    * The short piece of code below takes care\n",
+      ">    * of initializing the EOS parameters.\n",
+      ">    * Please refer to the \"inlined_functions.C\"\n",
+      ">    * source file for the documentation on the\n",
+      ">    * function.\n",
+      ">    */\n",
+      "157,165c167,168\n",
+      "<   eos.neos=neos;\n",
+      "<   eos.K_poly=K_poly;\n",
+      "<   eos.rho_tab[0]=rho_tab[0];\n",
+      "<   eos.P_tab[0]=P_tab[0];\n",
+      "<   eos.gamma_th=gamma_th;\n",
+      "<   eos.eps_tab[0]=eps_tab[0];\n",
+      "<   eos.k_tab[0]=k_tab[0];   eos.k_tab[1]=k_tab[1];\n",
+      "<   eos.gamma_tab[0]=gamma_tab[0]; eos.gamma_tab[1]=gamma_tab[1];\n",
+      "< \n",
+      "---\n",
+      ">   initialize_EOS_struct_from_input(eos);\n",
+      ">     \n"
      ]
     }
    ],
@@ -636,12 +677,18 @@
     "# the code more portable\n",
     "try:\n",
     "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "    # Write down the file the original IllinoisGRMHD source code\n",
+    "    with open(original_IGM_file_path,\"w\") as file:\n",
+    "        file.write(original_IGM_file_code)\n",
     "except:\n",
-    "    original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
-    "\n",
-    "# Write down the file the original IllinoisGRMHD source code\n",
-    "with open(original_IGM_file_path,\"w\") as file:\n",
-    "    file.write(original_IGM_file_code)\n",
+    "    try:\n",
+    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
+    "        # Write down the file the original IllinoisGRMHD source code\n",
+    "        with open(original_IGM_file_path,\"w\") as file:\n",
+    "            file.write(original_IGM_file_code)\n",
+    "    except:\n",
+    "        # If all else fails, hope wget does the job\n",
+    "        !wget -O $original_IGM_file_path $original_IGM_file_url\n",
     "\n",
     "# Perform validation\n",
     "Validation__outer_boundaries__C  = !diff $original_IGM_file_path $outfile_path__outer_boundaries__C\n",
@@ -683,14 +730,134 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__outer_boundaries.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 64108 bytes to Tutorial-IllinoisGRMHD__outer_boundaries.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "[NbConvertApp] Writing 87425 bytes to Tutorial-IllinoisGRMHD__outer_boundaries.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n"
      ]
@@ -722,7 +889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
