--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Tutorial-IllinoisGRMHD: symmetry__set_gzs_staggered_gfs.C\n",
     "\n",
-    "## Authors: Zach Etienne & Leo Werneck\n",
+    "## Authors: Leo Werneck & Zach Etienne\n",
     "\n",
     "<font color='red'>**This module is currently under development**</font>\n",
     "\n",
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/symmetry__set_gzs_staggered_gfs.C\n"
+      "Writing ../src/symmetry__set_gzs_staggered_gfs.C\n"
      ]
     }
    ],
@@ -204,6 +204,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--2019-10-09 22:23:30--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/symmetry__set_gzs_staggered_gfs.C\r\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.1, 18.205.93.2\r\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\r\n",
+      "HTTP request sent, awaiting response... 200 OK\r\n",
+      "Length: 2752 (2.7K) [text/plain]\r\n",
+      "Saving to: ‘../src/symmetry__set_gzs_staggered_gfs-original.C’\r\n",
+      "\r\n",
+      "../src/symmetry__se 100%[===================>]   2.69K  --.-KB/s    in 0s      \r\n",
+      "\r\n",
+      "2019-10-09 22:23:30 (77.2 MB/s) - ‘../src/symmetry__set_gzs_staggered_gfs-original.C’ saved [2752/2752]\r\n",
+      "\r\n",
       "Validation test for symmetry__set_gzs_staggered_gfs.C: PASSED!\n"
      ]
     }
@@ -225,12 +236,18 @@
     "# the code more portable\n",
     "try:\n",
     "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "    # Write down the file the original IllinoisGRMHD source code\n",
+    "    with open(original_IGM_file_path,\"w\") as file:\n",
+    "        file.write(original_IGM_file_code)\n",
     "except:\n",
-    "    original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
-    "\n",
-    "# Write down the file the original IllinoisGRMHD source code\n",
-    "with open(original_IGM_file_path,\"w\") as file:\n",
-    "    file.write(original_IGM_file_code)\n",
+    "    try:\n",
+    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
+    "        # Write down the file the original IllinoisGRMHD source code\n",
+    "        with open(original_IGM_file_path,\"w\") as file:\n",
+    "            file.write(original_IGM_file_code)\n",
+    "    except:\n",
+    "        # If all else fails, hope wget does the job\n",
+    "        !wget -O $original_IGM_file_path $original_IGM_file_url\n",
     "\n",
     "# Perform validation\n",
     "Validation__symmetry__set_gzs_staggered_gfs__C  = !diff $original_IGM_file_path $outfile_path__symmetry__set_gzs_staggered_gfs__C\n",
@@ -272,14 +289,84 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 38227 bytes to Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
+      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
+      "Refer to http://pandoc.org/installing.html.\r\n",
+      "Continuing with doubts...\r\n",
+      "  check_pandoc_version()\r\n",
+      "[NbConvertApp] Writing 41273 bytes to Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n"
      ]
@@ -311,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
