Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro-opt: start working on C code fixes

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro-opt.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro-opt.ipynb
@@ -703,7 +703,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 14.0468249321 seconds.\n"
+      "Finished BSSN symbolic expressions in 10.4631149769 seconds.\n"
      ]
     }
    ],
@@ -730,7 +730,8 @@
     "\n",
     "rhs.BSSN_RHSs()\n",
     "\n",
-    "T4UU = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"T4UU\",\"sym01\",DIM=4)\n",
+    "# T4UU = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"T4UU\",\"sym01\",DIM=4)\n",
+    "T4UU = ixp.declarerank2(\"T4UU\",\"sym01\",DIM=4)\n",
     "import BSSN.BSSN_stress_energy_source_terms as Bsest\n",
     "Bsest.BSSN_source_terms_for_BSSN_RHSs(T4UU)\n",
     "rhs.trK_rhs += Bsest.sourceterm_trK_rhs\n",
@@ -968,11 +969,15 @@
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
       "Generating C code for Ricci tensor in Spherical coordinates.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen in 0.727770090103 seconds.\n",
+      "Error: Unregistered variable \"T4UU00\" in SymPy expression for rhs_gfs[IDX4(ADD00GF, i0, i1, i2)]\n",
+      "All variables in SymPy expressions passed to FD_outputC() must be registered\n",
+      "in NRPy+ as either a gridfunction or Cparameter, by calling\n",
+      "T4UU00 = register_gridfunctions...() (in ixp/grid) if \"T4UU00\" is a gridfunction, or\n",
+      "T4UU00 = Cparameters() (in par) otherwise (e.g., if it is a free parameter set at C runtime).\n",
+      "Finished gamma constraint C codegen in 0.477887868881 seconds.\n",
       "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
-      "Finished Hamiltonian C codegen in 12.1462848186 seconds.\n",
-      "Finished BSSN_RHS C codegen in 34.4666531086 seconds.\n",
-      "Finished Ricci C codegen in 55.0949828625 seconds.\n"
+      "Finished Hamiltonian C codegen in 8.65200710297 seconds.\n",
+      "Finished Ricci C codegen in 36.0725381374 seconds.\n"
      ]
     }
    ],
@@ -1099,24 +1104,38 @@
      "output_type": "stream",
      "text": [
       "Wrote to file \"BSSN_Hydro_without_Hydro_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
-      "Error: Could not figure out parity type for evolved variable: T4UU03\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/zetienne/juppp/site-packages/IPython/core/interactiveshell.py:2886: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "Evolved gridfunction \"aDD00\" has parity type 4.\n",
+      "Evolved gridfunction \"aDD01\" has parity type 5.\n",
+      "Evolved gridfunction \"aDD02\" has parity type 6.\n",
+      "Evolved gridfunction \"aDD11\" has parity type 7.\n",
+      "Evolved gridfunction \"aDD12\" has parity type 8.\n",
+      "Evolved gridfunction \"aDD22\" has parity type 9.\n",
+      "Evolved gridfunction \"alpha\" has parity type 0.\n",
+      "Evolved gridfunction \"betU0\" has parity type 1.\n",
+      "Evolved gridfunction \"betU1\" has parity type 2.\n",
+      "Evolved gridfunction \"betU2\" has parity type 3.\n",
+      "Evolved gridfunction \"cf\" has parity type 0.\n",
+      "Evolved gridfunction \"hDD00\" has parity type 4.\n",
+      "Evolved gridfunction \"hDD01\" has parity type 5.\n",
+      "Evolved gridfunction \"hDD02\" has parity type 6.\n",
+      "Evolved gridfunction \"hDD11\" has parity type 7.\n",
+      "Evolved gridfunction \"hDD12\" has parity type 8.\n",
+      "Evolved gridfunction \"hDD22\" has parity type 9.\n",
+      "Evolved gridfunction \"lambdaU0\" has parity type 1.\n",
+      "Evolved gridfunction \"lambdaU1\" has parity type 2.\n",
+      "Evolved gridfunction \"lambdaU2\" has parity type 3.\n",
+      "Evolved gridfunction \"trK\" has parity type 0.\n",
+      "Evolved gridfunction \"vetU0\" has parity type 1.\n",
+      "Evolved gridfunction \"vetU1\" has parity type 2.\n",
+      "Evolved gridfunction \"vetU2\" has parity type 3.\n",
+      "Auxiliary gridfunction \"H\" has parity type 0.\n",
+      "AuxEvol gridfunction \"RbarDD00\" has parity type 4.\n",
+      "AuxEvol gridfunction \"RbarDD01\" has parity type 5.\n",
+      "AuxEvol gridfunction \"RbarDD02\" has parity type 6.\n",
+      "AuxEvol gridfunction \"RbarDD11\" has parity type 7.\n",
+      "AuxEvol gridfunction \"RbarDD12\" has parity type 8.\n",
+      "AuxEvol gridfunction \"RbarDD22\" has parity type 9.\n",
+      "Wrote to file \"BSSN_Hydro_without_Hydro_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n"
      ]
     }
    ],
@@ -1142,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,9 +1181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing BSSN_Hydro_without_Hydro_Ccodes//TOV_Playground.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/TOV_Playground.c\n",
     "\n",
@@ -1257,6 +1284,29 @@
     "    }\n",
     "    return dsmin*CFL_FACTOR/wavespeed;\n",
     "}\n",
+    "\n",
+    "// Step P4: Declare initial data input struct:\n",
+    "//          stores data from initial data solver,\n",
+    "//          so they can be put on the numerical grid.\n",
+    "typedef struct __ID_inputs {\n",
+    "    REAL Rbar;\n",
+    "    int Rbar_idx;\n",
+    "    int interp_stencil_size;\n",
+    "    int numlines_in_file;\n",
+    "    REAL *r_Schw_arr,*rho_arr,*P_arr,*M_arr,*expnu_arr,*exp4phi_arr,*rbar_arr;\n",
+    "} ID_inputs;\n",
+    "\n",
+    "// Part P11: Declare all functions for setting up TOV initial data.\n",
+    "/* Routines to interpolate the TOV solution and convert to ADM & T^{munu}: */\n",
+    "#include \"../TOV/tov_interp.h\"\n",
+    "#include \"ID_TOV_ADM_quantities.h\"\n",
+    "#include \"ID_TOV_TUPMUNU.h\"\n",
+    "\n",
+    "/* Next perform the basis conversion and compute all needed BSSN quantities */\n",
+    "#include \"ID_TOV_BSSN_Source_Terms.h\"\n",
+    "#include \"ID_ADM_xx0xx1xx2_to_BSSN_xx0xx1xx2__ALL_BUT_LAMBDAs.h\"\n",
+    "#include \"ID_BSSN__ALL_BUT_LAMBDAs.h\"\n",
+    "#include \"ID_BSSN_lambdas.h\"\n",
     "\n",
     "// Step P10: Declare function necessary for setting up the initial data.\n",
     "// Step P10.a: Define BSSN_ID() for BrillLindquist initial data\n",
@@ -1361,7 +1411,7 @@
     "                    /**/            &T4UU22,&T4UU23,\n",
     "                    /**/                    &T4UU33);\n",
     "                \n",
-    "                const int idx = IDX3(i0,i1,i2);\n",
+    "                const int idx = IDX3S(i0,i1,i2);\n",
     "                // THEN EVALUATE THE BSSN SOURCE TERMS\n",
     "                ID_TOV_BSSN_Source_Terms(xx0xx1xx2, \n",
     "                                         gammaDD00, gammaDD01, gammaDD02,\n",
@@ -1375,13 +1425,13 @@
     "                    /**/            T4UU22, T4UU23,\n",
     "                    /**/                    T4UU33,\n",
     "\n",
-    "                    &auxevol_gfs[IDX4pt(SDD00GF,idx)], &auxevol_gfs[IDX4pt(SDD01GF,idx)], &auxevol_gfs[IDX4pt(SDD02GF,idx)],\n",
-    "                    &auxevol_gfs[IDX4pt(SDD11GF,idx)], &auxevol_gfs[IDX4pt(SDD12GF,idx)],\n",
-    "                    &auxevol_gfs[IDX4pt(SDD22GF,idx)],\n",
+    "                    &auxevol_gfs[IDX4ptS(SDD00GF,idx)], &auxevol_gfs[IDX4ptS(SDD01GF,idx)], &auxevol_gfs[IDX4ptS(SDD02GF,idx)],\n",
+    "                    &auxevol_gfs[IDX4ptS(SDD11GF,idx)], &auxevol_gfs[IDX4ptS(SDD12GF,idx)],\n",
+    "                    &auxevol_gfs[IDX4ptS(SDD22GF,idx)],\n",
     "                    \n",
-    "                    &auxevol_gfs[IDX4pt(SD0GF,idx)], &auxevol_gfs[IDX4pt(SD1GF,idx)], &auxevol_gfs[IDX4pt(SD2GF,idx)],\n",
+    "                    &auxevol_gfs[IDX4ptS(SD0GF,idx)], &auxevol_gfs[IDX4ptS(SD1GF,idx)], &auxevol_gfs[IDX4ptS(SD2GF,idx)],\n",
     "                    \n",
-    "                    &auxevol_gfs[IDX4pt(SGF,idx)], &auxevol_gfs[IDX4pt(RHOGF,idx)]);\n",
+    "                    &auxevol_gfs[IDX4ptS(SGF,idx)], &auxevol_gfs[IDX4ptS(RHOGF,idx)]);\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -1637,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,7 +1695,7 @@
     "\n",
     "print(\"Now compiling, should take ~20 seconds...\\n\")\n",
     "start = time.time()\n",
-    "cmd.C_compile(\"BSSN/TOV_Playground.c\", \"TOV_Playground\")\n",
+    "cmd.C_compile(os.path.join(Ccodesdir,\"TOV_Playground.c\"), \"TOV_Playground\")\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\")\n",
     "\n",
